New notes.