@@ -2,6 +2,10 @@
 
 #### Links
 
+- Visual VM - c:\Program Files\Java\jdk1.8.0_102\bin\
+- [Memory Analyzer](https://www.eclipse.org/mat/)
+- [java tools](https://docs.oracle.com/javase/8/docs/technotes/tools/unix/java.html)
+
 #### Notes and Commands
 
 - stack (stos) 
@@ -49,7 +53,7 @@
   System.gc();
   ```
 
-- `finalize()` method is called by GC when object is beiing garbage collected . It is not guaranteed that this method will be run
+- `finalize()` method is called by GC when object is beiing garbage collected. It is not guaranteed that this method will be run
 
   ```java
   public void finalize(){
@@ -57,20 +61,86 @@
   }
   ```
 
+- Use `finalize()` only for warnings
+
 - Soft leaks - an object is referenced on the stack even though it will never be used again.
 
-- Xms - starting heap size
+- Xms - starting heap size, default 256 MB on client, 1/4 available on a server 
 
 - Xmx - max heap size
 
+  ```shell
+  -Xmx512m -Xms150m
+  ```
+
 - Java VisualVM - monitoring memory, CPU, Threads
 
-- Mark and sweep - gs stops program, than check references and its objects if they are alive, if so it marks them, ale the other will be removed
+- Mark and sweep 
 
-- Generational Garbage Collection - organizing the heap in sections young and old
+  - **"Mark" phase** - program is paused, gc checks every single live reference (checks the stack and follows each reference). Objects are beiing marked as alive, then heap is scanned and status of other objects is checked. 
+  - **"Sweep" phase** -  Objects that are not in use can be removed. Alive objects that are kept are moved to a single continuous block of memory (compacting)
+  - it is faster when the garbage is huge
 
-- young section is small and fast. Objects which survives sweeping are moved to the old section which is bigger and slower 
+- **"Generational Garbage Collection"** - organizing a heap in sections young and old
 
-- young (eden, s0, s1)
+- **"Young"** section is small and fast. New objects are created in "Young" section. When it is full, garbage collection takes place. Surviving objects are moved to **"Old"** section which is bigger and slower. 
+
+- **"Young"** is split into: Eden, S0, S1
+
+  - objects which survived a gc of "Eden" are moved to S0
+  - next time when gc runs survivors of "Eden" and objects kept in S0 are moved to S1 altogether 
+  - next time everything from S1 and survivors from "Eden" are moved back to S0
+  - objects which survived about 8 generations (moving from/to S0-S1) are moved to "Old" section 
+
+- **Visual GC** - plugin to Visual VM allowing for observation generations, young/old sections
+
+- **PermGen / MetaSpace**
+
+- **PermGen** - permanent generation. 
+
+  - never garbage collected 
+  - if it runs out of the space, the application will crush
+  - Strings on a pool, Metadata of newly created class 
+  - if PermGen goes out of space it means that your application has too many classes. Not caused by the memoty leaks. You can only resize a PermGen to fix the problem.
+  - java 8 replaced **PermGen** with **MetaSpace**
+
+- **MetaSpace** - metadata
+
+  - separate area of memory
+  - it is not a part of a heap
+  - total memory of your computer is available for the MetaSpace
+  - when  classes are no longer creatable a metaspace will be removed 
+
+- Tuning the Virtual Machine
+
+  - `-Xmx` - set the max heap size
+
+  - `-Xms` - set the starting heap size
+
+  - `-XX:MaxPermSize` - set the size of the permgen
+
+    ```shell
+    -XX:MaxPermSize=256M
+    ```
+
+  - `-verbose:gc` - print to the console when a garbage collection takes place
+
+  - `-Xmn` set the size of yount generation. Young  generation by default is set 1/4 of total heap size. If very few object survive you can increase the size of young generation (1/2 - 1/4 of heap size)
+
+  - `-XX:HeapDumpOnOutOfMemory` - creates a heap dump file
+
+- Types of collector
+
+  - Serial - one thead, good for small applications `-XX:+UseSerialGC`
+
+  - Paraller - gc on young generation in parallel, multi threads, good for large data sets
+
+    `-XX:+UseParallelGC`
+
+  - Mostly Concurrent - pause time is minimazed `-XX:+UseConcMarkSweepGC` or 
+
+    `-XX:+UseG1GC`
+
+  - `-XX:+PrintCommandLineFlags` - to find out which collector is used
 
 #### Instructions
